# reactor

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_FEATURE.md  COLLAPSIBLE_THOUGHTS.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  REACTOR_SYSTEM.md  README.md  SIMPLIFIED_AGENT.md  conversation_history.md  debug_agent.py  debug_graph_output.py  flaky_service.py  main.py  main_cli.py  plan-for-web.md  pyproject.toml  test_input.py  test_simple_graph.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
.reactor/agents/: code-reviewer.md  release-manager.md  web-researcher.md
.reactor/skills/: backend-api.md  frontend-dev.md  tui-design.md
docs/: AI_ONBOARDING.md  CREATING_AGENTS_AND_SKILLS.md  what-reactor-analyzed-about-the-repo.md
src/: cli.py  graph.py  graph_simple.py  logger.py  main.py  models.py  state.py  utils.py
src/agents/: __init__.py  instance.py  loader.py  manager.py
src/llm/: base.py  client.py  factory.py  langchain_client.py
src/nodes/: __init__.py  agent_nodes.py  analysis_nodes.py  approval_nodes.py  communication_nodes.py  execution_nodes.py  llm_nodes.py  refinement_nodes.py  thinking_nodes.py
src/prompts/: __init__.py  system_prompts.yaml
src/reactor/: __init__.py  analyzers.py  auto_fixes.py  code_reactor.py  config.py  feedback.py  validators.py
src/skills/: __init__.py  loader.py
src/tools/: __init__.py  agent_tools.py  file_tools.py  git_tools.py  grep_and_log_tools.py  shell_tools.py  todo_tools.py  user_communication_tools.py  web_tools.py
src/tui/: __init__.py  app.py  bridge.py  state.py  styles.tcss  widgets.py
src/utils/: __init__.py  (+2 more)
tests/: test_ast_integration.py  test_smoke.py  verify_parallel_agents.py
(+44 files in other folders)
