[project]
name = "reactive-shell-agent"
version = "0.3.0"
description = ""
authors = [
    {name = "Faisal Ahmed Sifat",email = "faisalahmed531@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.0,<4.0.0)",
    "langchain-google-genai (>=3.2.0,<4.0.0)",
    "textual (>=0.85.0,<1.0.0)",
    "rich (>=13.9.0,<14.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]

[project.scripts]
reactor = "src.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.11.0,<26.0.0)"
]
